# magnum-lua-build

./: .gitmodules  CMakeLists.txt  LICENSE
lua/: CMakeLists.txt
lua/sol/: config.hpp  forward.hpp  sol.hpp
src/: CMakeLists.txt  MyApplication.cpp
